name:                hix
version:             0.1.0.0
synopsis:            An implementation of Knuth's MIX architecture.
homepage:            https://github.com/patrickt/hix#
license:             BSD3
license-file:        LICENSE
author:              Patrick Thomson
maintainer:          patrickt@github.com
copyright:           2018 Patrick Thomson
category:            Compilers/Interpreters
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hix
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , vector-sized
                     , semilattices
                     , finite-typelits
                     , prettyprinter
                     , indexed-list-literals
